--- a/form.html
+++ b/form.html
@@ -14,7 +14,10 @@
         <div class="row p-5">
             <div class="col-md-4" align="center">
                 <h1>Teste API method='POST' em JS</h1>
-                <form onsubmit="postEquipamento()">
+
+
+
+                <form onsubmit="getEquipamento()">
                     <div class="mb-3">
                         <label class="control-label" for="nome_equipamento">nome_equipamento:</label>
                         <input class="form-control form-control-lg" name="nome_equipamento" id="nome_equipamento"
@@ -31,9 +34,10 @@
                     </div>
                     <div class="mb-3">
                         <button class="btn btn-success shadow-sm mr-3" type="submit">Enviar</button>
-                    </div>
-
+                    </div> 
                 </form>
+
+
             </div>
         </div>
     </div>
